Première étape - Initialisation du projet Kasa

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Vite
+.vite
+
 # Logs
 logs
 *.log
@@ -22,3 +25,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
+
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
